--- a/sharpforum-web/public/locales/en.json
+++ b/sharpforum-web/public/locales/en.json
@@ -19,11 +19,11 @@
     "singular": "Reply",
     "add-reply": "Add reply"
   },
-  "layouts": {
-    "navigation": {
-      "home-link": "Home",
+  "layout": {
+    "nav": {
+      "home": "Home",
       "greet": "Hi",
-      "logout-link": "Logout"
+      "logout": "Logout"
     }
   },
   "users": {
