user details page update

--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -31,6 +31,9 @@
       "name": "Име",
       "password": "Парола",
       "no-account-q": "Нямаш акаунт?"
+    },
+    "details": {
+      "role": "Роля"
     }
   }
 }
