--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -23,7 +23,10 @@
     "nav": {
       "home": "Начало",
       "greet": "Здравей",
-      "logout": "Излез"
+      "logout": "Излез",
+      "lang": "Език",
+      "en": "English",
+      "bg": "Български"
     }
   },
   "users": {
