user registration validation

--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -4,7 +4,9 @@
     "login": "Вход",
     "by": "от",
     "on": "на",
-    "edit": "редактирай"
+    "edit": "редактирай",
+    "req-field": "Полето е задължително",
+    "err": "Възникна грешка"
   },
   "categories": {
     "title": "Категории"
@@ -44,7 +46,11 @@
       "name-placeholder": "Псевдоним видим от останалите потребители",
       "pass-placeholder": "Въведете парола",
       "email-placeholder": "Незадължително: използва се за подновяване на парола или известия при отговор",
-      "privacy-policy-notice": "Разбрах и приемам"
+      "privacy-policy-notice": "Разбрах и приемам",
+      "privacy-policy-err": "Политика за поверителност трябва да бъде приета",
+      "email-invalid-err": "Невалиден email адрес",
+      "email-taken-err": "Email адреса вече е регистриран",
+      "name-taken-err": "Потребител с този псевдоним вече е регистриран"
     },
     "details": {
       "role": "Роля"
