--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -6,7 +6,9 @@
     "on": "на",
     "edit": "редактирай",
     "req-field": "Полето е задължително",
-    "err": "Възникна грешка"
+    "err": "Възникна грешка",
+    "show": "Покажи",
+    "hide": "Скрий"
   },
   "categories": {
     "title": "Категории"
