--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -31,6 +31,11 @@
       "lang": "Език",
       "en": "English",
       "bg": "Български"
+    },
+    "notfound": {
+      "yikes": "Опа!",
+      "info": "Страницата не е открита.",
+      "link": "Начална страница"
     }
   },
   "users": {
