--- a/sharpforum-web/public/locales/en.json
+++ b/sharpforum-web/public/locales/en.json
@@ -31,6 +31,11 @@
       "lang": "Language",
       "en": "English",
       "bg": "Български"
+    },
+    "notfound": {
+      "yikes": "Yikes!",
+      "info": "Page not found.",
+      "link": "Home page"
     }
   },
   "users": {
