user list and design updates

--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -9,7 +9,8 @@
     "err": "Възникна грешка",
     "show": "Покажи",
     "hide": "Скрий",
-    "publish": "Публикувай"
+    "publish": "Публикувай",
+    "profile": "Профил"
   },
   "categories": {
     "title": "Категории"
@@ -43,7 +44,8 @@
       "logout": "Излез",
       "lang": "Език",
       "en": "English",
-      "bg": "Български"
+      "bg": "Български",
+      "users": "Потребители"
     },
     "notfound": {
       "yikes": "Опа!",
