--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -20,6 +20,7 @@
     "title-l": "теми",
     "singular": "Тема",
     "add-topic": "Добави тема",
+    "published": "Публикувана на",
     "add": {
       "subject": "Заглавие",
       "subject-placeholder": "Заглавие на темата",
@@ -30,7 +31,7 @@
   },
   "replies": {
     "title": "Отговори",
-    "title-l": "отговори",
+    "title-l": "отговора",
     "singular": "Отговор",
     "add-reply": "Добави отговор",
     "add": {
