--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -12,6 +12,10 @@
     "publish": "Публикувай",
     "profile": "Профил"
   },
+  "admin": {
+    "dash": "Администрация",
+    "dash-desc": "От тук можете да правите настройки на Вашият форум"
+  },
   "categories": {
     "title": "Категории"
   },
