--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -47,7 +47,8 @@
       "msg-placeholder": "",
       "login-err": "За да добавите отговор е нужно да се впишете."
     },
-    "anchor": "Линк котва"
+    "anchor": "Линк котва",
+    "none": "Темата няма отговори, добави първият"
   },
   "layout": {
     "nav": {
