admin panel updates

--- a/sharpforum-web/public/locales/bg.json
+++ b/sharpforum-web/public/locales/bg.json
@@ -4,7 +4,7 @@
     "login": "Вход",
     "by": "от",
     "on": "на",
-    "edit": "редактирай",
+    "edit": "Редактирай",
     "req-field": "Полето е задължително",
     "err": "Възникна грешка",
     "show": "Покажи",
@@ -14,7 +14,17 @@
   },
   "admin": {
     "dash": "Администрация",
-    "dash-desc": "От тук можете да правите настройки на Вашият форум"
+    "dash-desc": "От тук можете да правите настройки на Вашият форум",
+    "categories": {
+      "add": "Добави категория",
+      "name": "Име",
+      "name-ph": "Име на категорията",
+      "desc": "Описание",
+      "desc-ph": "Описание на категорията",
+      "placeholder": "Използвай като заглавие",
+      "edit": "Редакция на категории",
+      "displayOrder": "Ред на показване"
+    }
   },
   "categories": {
     "title": "Категории"
