Add basic validation test for CategoryAddForm

--- a/sharpforum-web/public/locales/en.json
+++ b/sharpforum-web/public/locales/en.json
@@ -6,7 +6,7 @@
     "on": "on",
     "edit": "Edit",
     "req-field": "Field is required",
-    "err": "Error occured",
+    "err": "Error occurred",
     "show": "Show",
     "hide": "Hide",
     "publish": "Publish",
